welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:7: error: not found: value c
    		if (getCouleurSol()== c) {
                                      ^SlugSnail:21: error: too many arguments for method isFacingTrail: ()Boolean
   		if (isFacingTrail(y)== true) {
                                 ^